validaciones de backend y frontend

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -59,7 +59,7 @@
         <div id="invitacion-registro">
 
             <p>¡Sé parte de nuestra comunidad para obtener descuentos!</p>
-            <a href="user/register/"><button>Unirme</button></a>
+            <a href="user/register"><button>Unirme</button></a>
 
         </div>
 
