--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -216,6 +216,27 @@ button i:hover {
     color: var(--darkgray);
 }
 
+.validaciones{
+    margin: 0;
+    font-size: 12px;
+    color:var(--orange);
+}
+
+.valid:focus{
+    outline: none!important;
+    border: 1px solid #00FF00;
+}
+
+.invalid:focus{
+    outline: none!important;
+    border: 1px solid #FF3c00;
+    color: #FF3c00
+}
+
+div.errores ul{
+    padding-left: 0;
+    list-style-type: none;
+}
 
 @media (min-width: 720px) {
 
