--- a/public/css/productCreateStyle.css
+++ b/public/css/productCreateStyle.css
@@ -110,7 +110,38 @@ form textarea{
 
 form .current-img{
     margin:0;
-    color: var(--darkblue);}
+    color: var(--darkblue);
+}
+
+.valdiv{
+    text-align: center;
+}
+
+.validaciones{
+    margin: 0;
+    font-size: 12px;
+    color:var(--orange);
+}
+
+.valid:focus{
+    outline: none!important;
+    border: 1px solid #00FF00;
+}
+
+.invalid:focus{
+    outline: none!important;
+    border: 1px solid #FF3c00;
+    color: #FF3c00
+}
+
+div.errores{
+    text-align: center;
+}
+
+div.errores ul{
+    padding-left: 0;
+    list-style-type: none;
+}
 
 
 @media (min-width: 720px) {
