--- a/public/css/registerStyle.css
+++ b/public/css/registerStyle.css
@@ -134,6 +134,28 @@ button i:hover {
     margin-left: 10%;
 }
 
+.validaciones{
+    margin: 0;
+    font-size: 12px;
+    color:var(--orange);
+}
+
+.valid:focus{
+    outline: none!important;
+    border: 1px solid #00FF00;
+}
+
+.invalid:focus{
+    outline: none!important;
+    border: 1px solid #FF3c00;
+    color: #FF3c00
+}
+
+div.errores ul{
+    padding-left: 0;
+    list-style-type: none;
+}
+
 /* Imagen */
 
 #slideshow-container {
