--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,14 +16,28 @@
         <div class="caja-inicio">
             <h2>Iniciar Sesión</h2>
 
-            <form action="/user/login" method="POST">
+            <% if(locals && locals.errores) { %>
+
+                <% for (let error in errores) { %>
+
+                    <p class="validaciones"><%=errores[error].msg%></p>
+                <% } %>
+            
+            <% } %>
+
+            <div class="errores">
+                <ul class="validaciones">
+                </ul>
+            </div>
+
+            <form class="form_login" action="/user/login" method="POST">
                 <p class="field">
                     <label for="correo">Correo electrónico:</label><br>
-                    <input type="email" name="correo" class="input-text"><i class="fas fa-envelope"></i>
+                    <input type="email" name="correo" class="input-text correo" <% if(locals && locals.errores) { %> value="<%= locals && old.correo ? old.correo: "" %>" <% } %> ><i class="fas fa-envelope"></i>
                 </p>
                 <p class="field">
                     <label for="contra">Contraseña:</label><br>
-                    <input type="password" name="contra" class="input-text contrasena"><i class="fas fa-eye-slash"></i>
+                    <input type="password" name="contra" class="input-text contrasena" <% if(locals && locals.errores) { %> value="<%= locals && old.contra ? old.contra: "" %>" <% } %> ><i class="fas fa-eye-slash"></i>
                 </p>
 
                 <p class="pequeño corrido olvidaste"><a href="">¿Olvidaste tu contraseña?</a></p>
@@ -67,7 +81,7 @@
                     <li>Seguimiento de tu pedido</li>
                     <li>Acceso a promociones</li>
                 </ul>
-            <a href="/user/register/"><button class="button-especial" type="button">Unirme ahora</button></a>
+            <a href="/user/register"><button class="button-especial" type="button">Unirme ahora</button></a>
         </div>
         </section>
 
@@ -80,7 +94,7 @@
 
             <div id="slideshow-text">
                 <p>Suscríbete y entérate de todas las promociones</p>
-                <a href="/user/register/"><button class="button-especial" >Suscribirme</button></a>
+                <a href="/user/register"><button class="button-especial" >Suscribirme</button></a>
             </div>
 
         </div>
@@ -114,6 +128,9 @@
             </div>
         </section>
     </main>
+
+    <script src="/js/validacionLogin.js" type="text/javascript"></script>
+
 
     <%- include( "../partials/footer" ) %>
     
