--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -18,34 +18,45 @@
 
                 <p class="subtitulo">¿Aún no eres miembro?</p>
 
-                <form action="/user/" method="POST" enctype="multipart/form-data">
+                <% if(locals && locals.errores) { %>
+
+                    <% for (let error in errores) { %>
+
+                        <p class="validaciones"><%=errores[error].msg%></p>
+                    <% } %>
+                
+                <% } %>
+
+                <div class="errores">
+                    <ul class="validaciones">
+                    </ul>
+                </div>
+
+                <form action="/user/register" method="POST" enctype="multipart/form-data" class="form_register">
                     <p class="field">
                         <label for="nombre">Nombre:</label>
-                        <input class="input-text" type="text" name="nombre">
+                        <input class="input-text nombre" type="text" name="nombre" 
+                        <% if(locals && locals.errores) { %> value="<%= locals && old.nombre ? old.nombre: "" %>" <% } %> >
                     </p>
                     <p class="field">
                         <label for="apellido">Apellido:</label>
-                        <input class="input-text" type="text" name="apellido">
+                        <input class="input-text apellido" type="text" name="apellido" <% if(locals && locals.errores) { %> value="<%= locals && old.apellido ? old.apellido: "" %>" <% } %> >
                     </p>
                     <p class="field">
                         <label for="fecha">Fecha de nacimiento:</label>
-                        <input class="input-text" type="date" name="fecha">
+                        <input class="input-text" type="date" name="fecha" <% if(locals && locals.errores) { %> value="<%= locals && old.fecha ? old.fecha: "" %>" <% } %> >
                     </p>
                     <p class="field">
                         <label for="correo">Correo:</label>
-                        <input class="input-text" type="email" name="correo">
+                        <input class="input-text correo" type="email" name="correo" <% if(locals && locals.errores) { %> value="<%= locals && old.correo ? old.correo: "" %>" <% } %> >
                     </p>
                     <p class="field">
                         <label for="contra">Contraseña:</label>
-                        <input class="input-text" type="password" name="contra">
-                    </p>
-                    <p class="field">
-                        <label for="conficontra">Confirmar contraseña:</label>
-                        <input class="input-text" type="password" name="conficontra">
+                        <input class="input-text contra" type="password" name="contra" <% if(locals && locals.errores) { %> value="<%= locals && old.contra ? old.contra: "" %>" <% } %> >
                     </p>
                     <p class="field">
                         <label for="imagen">Foto de perfil:</label>
-                        <input type="file" accept="image/*" name="imagen">
+                        <input class="imagen" type="file" accept="image/*" name="imagen">
                     </p>
                     
                     <p class="pequeño">
@@ -56,7 +67,7 @@
 
                 </form>
 
-                <p>Iniciar sesión con:</p>
+                <p>Registrarte con:</p>
                 <div class="sesion-redes">
                     <a href=""> <button> <i class="fab fa-facebook-square"></i> Facebook  </button> </a>
                     <a href=""> <button> <i class="fab fa-google-plus-square"></i> Google </button> </a>
@@ -85,6 +96,8 @@
 
         
     </main>
+
+    <script src="/js/validacionRegistro.js" type="text/javascript"></script>
 
     <%- include( "../partials/footer" ) %>
     
