react dashboard done

--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -42,6 +42,8 @@ body {
     left: 20px;
     position: absolute;
     top: 30%;
+    color:var(--white);
+    text-shadow: 2px 2px 4px var(--darkgray);
 }
 
 #slideshow-container p {
