--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
 
             <div id="slideshow-text">
                 <p>Entrena y da lo mejor de ti</p>
-                <button class="especial">Empieza ya</button>
+                <a href="/products"><button class="especial">Empieza ya</button></a>
             </div>
 
         </div>
@@ -32,24 +32,30 @@
             <article class="categoria">
 
                 <div class="foto">
+                    <a href="/products/?type=Tenis">
                     <img src="/images/tenis.jpg" alt="tenis">
                     <div class="overlay"></div>
+                    </a>
                 </div>
                 <p class="titulo-categoria">Tenis</p>
             </article>
 
             <article class="categoria">
                 <div class="foto">
+                    <a href="/products/?type=Ropa">
                     <img src="/images/ropa.jpg" alt="ropa">
                     <div class="overlay"></div>
+                    </a>
                 </div>
                 <p class="titulo-categoria">Ropa</p>
             </article>
 
             <article class="categoria">
                 <div class="foto">
+                    <a href="/products/?type=Accesorios">
                     <img src="/images/accesorios.jpg" alt="tenis">
                     <div class="overlay"></div>
+                    </a>
                 </div>
                 <p class="titulo-categoria">Accesorios</p>
             </article>
