--- a/public/css/productStyle.css
+++ b/public/css/productStyle.css
@@ -427,6 +427,7 @@ p.review-user{
     }
 
     .product-size {
+        font-size: 14px;
         padding: 0;
     }
 
@@ -440,6 +441,7 @@ p.review-user{
 
     .product-selections {
         justify-content: space-between;
+        font-size: 14px;
     }
     
     .product-selection select {
